# advent-of-code

./: Cargo.toml  README.md
aoc-macro/: Cargo.toml
aoc-macro/src/: lib.rs
src/: bitvec.rs  cycle.rs  lib.rs  matrix.rs  md5iter.rs  modulo_solver.rs
y2018/: Cargo.toml
y2018/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  device.rs  main.rs
y2018/src/device/: op_codes.rs
