[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
name = "advent-of-code"
version = "0.1.0"

[dependencies]
failure = "0.1"
smallvec = "0.6"

[[bin]]
name = "y2016"
path = "src/bin/y2016/main.rs"
bench = true

[[bin]]
name = "y2017"
path = "src/bin/y2017/main.rs"
bench = true

[profile.release]
debug = true
