[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
name = "advent-of-code"
version = "0.1.0"

[dependencies]
failure = "0.1"
smallvec = "0.6"
itertools = "0.7"
bitflags = "1.0"
petgraph = "0.4"
memchr = "2.0"
quickcheck = "0.5"
primal = "0.2"

[[bin]]
name = "y2016"
path = "src/bin/y2016/main.rs"
bench = true

[[bin]]
name = "y2017"
path = "src/bin/y2017/main.rs"
bench = true

[profile.release]
debug = true
