[package]
name = "y2018"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

[dependencies]
aoc-macro = { path = "../aoc-macro" }
criterion = "0.2"
regex = "1"
fnv = "1"
bitvec = "0.8"
petgraph = "0.4.13"
generational-arena = "0.2"
hashbrown = "0.1.7"
regex-syntax = "0.6"
